Fix size of horizontal scrollbar thumb

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 ::-webkit-scrollbar {
-  height: 1rem;
+  height: 0.5rem;
   width: 0.5rem;
 }
 
